--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                  </h1>
             </div>
             <a href="#section-tours" class="btn btn--white btn--animated"
-            >Discover our tours</a
+            >Discover tours</a
           >
         </div>
 
