--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     
 </head>
 <body>
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
+    </div>
+
     <header class="header">
         <div class="header__logo-box">
             <img src="./img/logo.svg" alt="header__logo" class="header__logo">
