--- a/index.html
+++ b/index.html
@@ -69,6 +69,50 @@
                 </div>
             </div>
         </section>
+        <section class="section-features">
+            <div class="row">
+
+                <div class="col-1-of-4">
+                    <div class="card--feature">
+                        <i class="card--feature__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore Winery</h3>
+                        <p class="card--feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="card--feature">
+                        <i class="card--feature__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Meet History</h3>
+                        <p class="card--feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="card--feature">
+                        <i class="card--feature__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                         <p class="card--feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="card--feature">
+                        <i class="card--feature__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live a life</h3>
+                        <p class="card--feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
 </body>
 
