[Sec_Tours_1.2] Fix name Error of card set-up

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
 
       <div class="row">
         <div class="col-1-of-3">
-          <div class="card--story">
-            <div class="card--story__side card--story__side--front">
-              <div class="card--story__picture card--story__picture--1">
+          <div class="card--tour">
+            <div class="card--tour__side card--tour__side--front">
+              <div class="card--tour__picture card--tour__picture--1">
                 &nbsp;
               </div>
-              <h4 class="card--story__heading">
-                <span class="card--story__heading-span card--story__heading-span--1">The Sea Explorer</span>
+              <h4 class="card--tour__heading">
+                <span class="card--tour__heading-span card--tour__heading-span--1">The Sea Explorer</span>
               </h4>
-              <div class="card--story__details">
+              <div class="card--tour__details">
                 <ul>
                   <li>3 day tours</li>
                   <li>Up to 30 people</li>
@@ -147,11 +147,11 @@
               </div>
             </div>
 
-            <div class="card--story__side card--story__side--back card--story__side--back-1">
-              <div class="card--story__cta">
-                <div class="card--story__price-box">
-                  <p class="card--story__price-only">Only</p>
-                  <p class="card--story__price-value">$297</p>
+            <div class="card--tour__side card--tour__side--back card--tour__side--back-1">
+              <div class="card--tour__cta">
+                <div class="card--tour__price-box">
+                  <p class="card--tour__price-only">Only</p>
+                  <p class="card--tour__price-value">$297</p>
                 </div>
                 <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
@@ -160,15 +160,15 @@
         </div>
 
         <div class="col-1-of-3">
-          <div class="card--story">
-            <div class="card--story__side card--story__side--front">
-              <div class="card--story__picture card--story__picture--2">
+          <div class="card--tour">
+            <div class="card--tour__side card--tour__side--front">
+              <div class="card--tour__picture card--tour__picture--2">
                 &nbsp;
               </div>
-              <h4 class="card--story__heading">
-                <span class="card--story__heading-span card--story__heading-span--2">The Forest Hiker</span>
+              <h4 class="card--tour__heading">
+                <span class="card--tour__heading-span card--tour__heading-span--2">The Forest Hiker</span>
               </h4>
-              <div class="card--story__details">
+              <div class="card--tour__details">
                 <ul>
                   <li>7 day tours</li>
                   <li>Up to 40 people</li>
@@ -178,11 +178,11 @@
                 </ul>
               </div>
             </div>
-            <div class="card--story__side card--story__side--back card--story__side--back-2">
-              <div class="card--story__cta">
-                <div class="card--story__price-box">
-                  <p class="card--story__price-only">Only</p>
-                  <p class="card--story__price-value">$497</p>
+            <div class="card--tour__side card--tour__side--back card--tour__side--back-2">
+              <div class="card--tour__cta">
+                <div class="card--tour__price-box">
+                  <p class="card--tour__price-only">Only</p>
+                  <p class="card--tour__price-value">$497</p>
                 </div>
                 <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
@@ -191,15 +191,15 @@
         </div>
 
         <div class="col-1-of-3">
-          <div class="card--story">
-            <div class="card--story__side card--story__side--front">
-              <div class="card--story__picture card--story__picture--3">
+          <div class="card--tour">
+            <div class="card--tour__side card--tour__side--front">
+              <div class="card--tour__picture card--tour__picture--3">
                 &nbsp;
               </div>
-              <h4 class="card--story__heading">
-                <span class="card--story__heading-span card--story__heading-span--3">The Snow Adventurer</span>
+              <h4 class="card--tour__heading">
+                <span class="card--tour__heading-span card--tour__heading-span--3">The Snow Adventurer</span>
               </h4>
-              <div class="card--story__details">
+              <div class="card--tour__details">
                 <ul>
                   <li>5 day tours</li>
                   <li>Up to 15 people</li>
@@ -209,11 +209,11 @@
                 </ul>
               </div>
             </div>
-            <div class="card--story__side card--story__side--back card--storys__side--back-3">
-              <div class="card--story__cta">
-                <div class="card--story__price-box">
-                  <p class="card--story__price-only">Only</p>
-                  <p class="card--story__price-value">$897</p>
+            <div class="card--tour__side card--tour__side--back card--tours__side--back-3">
+              <div class="card--tour__cta">
+                <div class="card--tour__price-box">
+                  <p class="card--tour__price-only">Only</p>
+                  <p class="card--tour__price-value">$897</p>
                 </div>
                 <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
