--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   </header>
   <!-- Main -->
   <main>
+    <!-- Sec_About -->
     <section class="section-about">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading__secondary">
@@ -73,6 +74,7 @@
         </div>
       </div>
     </section>
+    <!-- Sec_Features -->
     <section class="section-features">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading__secondary heading__secondary--light-mode">
@@ -119,6 +121,7 @@
         </div>
       </div>
     </section>
+    <!-- Sec_Tours -->
     <section class="section-tours" id="section-tours">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading__secondary">
@@ -227,6 +230,62 @@
       </div>
 
     </section>
+    <!-- Sec_Stories -->
+    <section class="section-stories">
+      <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+              <source src="img/Background_video_story.mp4" type="video/mp4" alt="video">
+              Your browser is not supported!
+          </video>
+      </div>
+
+      <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading__secondary">
+              We make people genuinely happy
+          </h2>
+      </div>
+
+      <div class="row">
+          <div class="story">
+              <figure class="story__shape">
+                  <img src="img/photo_story_1.jpg" alt="Person on a tour" class="story__img">
+                  <figcaption class="story__caption">Mary Smith</figcaption>
+              </figure>
+              <div class="story__text">
+                  <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                  <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+                      ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+                      repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+                  </p>
+              </div>
+          </div>
+      </div>
+
+      <div class="row">
+          <div class="story">
+              <figure class="story__shape">
+                  <img src="img/photo_story_2.jpg" alt="Person on a tour" class="story__img">
+                  <figcaption class="story__caption">Jack Wilson</figcaption>
+              </figure>
+              <div class="story__text">
+                  <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
+                  <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+                      ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+                      repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+                  </p>
+              </div>
+          </div>
+      </div>
+
+      <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+      </div>
+  </section>
+
+
+
     <!-- Pop-up -->
     <div class="popup" id="popup">
       <div class="popup__content">
