--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </div>
 
     <div class="header__text-box">
-      <div class="heading__primary">
-        <h1 class="heading__primary--main">
+      <div class="heading-primary">
+        <h1 class="heading-primary--main">
           Taste your Curiosity
         </h1>
-        <h1 class="heading__primary--sub">
+        <h1 class="heading-primary--sub">
           Exciting Tours for Wine people
         </h1>
       </div>
@@ -42,7 +42,7 @@
     <!-- Sec_About -->
     <section class="section-about">
       <div class="u-center-text u-margin-bottom-big">
-        <h2 class="heading__secondary">
+        <h2 class="heading-secondary">
           Exciting tours for winery people
         </h2>
       </div>
@@ -77,7 +77,7 @@
     <!-- Sec_Features -->
     <section class="section-features">
       <div class="u-center-text u-margin-bottom-big">
-        <h2 class="heading__secondary heading__secondary--light-mode">
+        <h2 class="heading-secondary heading-secondary--light-mode">
           Explore Our Amazing Offer
         </h2>
       </div>
@@ -124,7 +124,7 @@
     <!-- Sec_Tours -->
     <section class="section-tours" id="section-tours">
       <div class="u-center-text u-margin-bottom-big">
-        <h2 class="heading__secondary">
+        <h2 class="heading-secondary">
           Most popular tours
         </h2>
       </div>
@@ -225,7 +225,7 @@
         </div>
       </div>
 
-      <div class="u-center-text u-margin-top-huge">
+      <div class="u-center-text u-margin-top-small">
         <a href="#" class="btn btn--white">Discover all tours</a>
       </div>
 
@@ -233,87 +233,138 @@
     <!-- Sec_Stories -->
     <section class="section-stories">
       <div class="bg-video">
-          <video class="bg-video__content" autoplay muted loop>
-              <source src="img/Background_video_story.mp4" type="video/mp4" alt="video">
-              Your browser is not supported!
-          </video>
+        <video class="bg-video__content" autoplay muted loop>
+          <source src="img/Background_video_story.mp4" type="video/mp4" alt="video">
+          Your browser is not supported!
+        </video>
       </div>
 
       <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading__secondary">
-              We make people genuinely happy
-          </h2>
+        <h2 class="heading-secondary">
+          We make people genuinely happy
+        </h2>
       </div>
 
       <div class="row">
-          <div class="story">
-              <figure class="story__shape">
-                  <img src="img/photo_story_1.jpg" alt="Person on a tour" class="story__img">
-                  <figcaption class="story__caption">Mary Smith</figcaption>
-              </figure>
-              <div class="story__text">
-                  <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
-                  <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
-                      ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
-                      repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
-                  </p>
-              </div>
+        <div class="story">
+          <figure class="story__shape">
+            <img src="img/photo_story_1.jpg" alt="Person on a tour" class="story__img">
+            <figcaption class="story__caption">Mary Smith</figcaption>
+          </figure>
+          <div class="story__text">
+            <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero
+              repellat quis consequatur
+              ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+              repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+            </p>
           </div>
+        </div>
       </div>
 
       <div class="row">
-          <div class="story">
-              <figure class="story__shape">
-                  <img src="img/photo_story_2.jpg" alt="Person on a tour" class="story__img">
-                  <figcaption class="story__caption">Jack Wilson</figcaption>
-              </figure>
-              <div class="story__text">
-                  <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
-                  <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
-                      ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
-                      repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
-                  </p>
-              </div>
+        <div class="story">
+          <figure class="story__shape">
+            <img src="img/photo_story_2.jpg" alt="Person on a tour" class="story__img">
+            <figcaption class="story__caption">Jack Wilson</figcaption>
+          </figure>
+          <div class="story__text">
+            <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero
+              repellat quis consequatur
+              ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
+              repellat quis consequatur ducimus quam nisi exercitationem omnis earum qui.
+            </p>
           </div>
+        </div>
       </div>
 
-      <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn-text">Read all stories &rarr;</a>
+      <div class="u-center-text u-margin-top-small">
+        <a href="#" class="btn-text">Read all stories &rarr;</a>
       </div>
-  </section>
+    </section>
+    <!-- Sec_Booking -->
+    <section class="section-book">
+      <div class="row">
+        <div class="book">
+          <div class="book__form">
+            <form action="#" class="form">
+              <div class="u-margin-bottom-medium">
+                <h2 class="heading-secondary">
+                  Start booking now
+                </h2>
+              </div>
+
+              <div class="form__group">
+                <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                <label for="name" class="form__label">Full name</label>
+              </div>
+
+              <div class="form__group">
+                <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                <label for="email" class="form__label">Email address</label>
+              </div>
+
+              <div class="form__group u-margin-bottom-medium">
+                <div class="form__radio-group">
+                  <input type="radio" class="form__radio-input" id="small" name="size">
+                  <label for="small" class="form__radio-label">
+                    <span class="form__radio-button"></span>
+                    Small tour group
+                  </label>
+                </div>
+
+                <div class="form__radio-group">
+                  <input type="radio" class="form__radio-input" id="large" name="size">
+                  <label for="large" class="form__radio-label">
+                    <span class="form__radio-button"></span>
+                    Large tour group
+                  </label>
+                </div>
+              </div>
+
+              <div class="form__group">
+                <button class="btn btn--green">Next step &rarr;</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
     <!-- Pop-up -->
     <div class="popup" id="popup">
       <div class="popup__content">
-          <div class="popup__left">
-              <img src="img/photo-tour-booking-1.jpg" alt="Tour photo" class="popup__img">
-              <img src="img/photo-tour-booking-2.jpg" alt="Tour photo" class="popup__img">
-          </div>
-          <div class="popup__right">
-              <a href="#section-tours" class="popup__close">&times;</a>
-              <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
-              <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
-              <p class="popup__text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
-                  amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
-                  sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
-                  gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
-                  Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
-                  vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
-                  vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
-                  euismod nisi porta.
-              </p>
-              <a href="#" class="btn-text ">Book now</a>
-          </div>
+        <div class="popup__left">
+          <img src="img/photo-tour-booking-1.jpg" alt="Tour photo" class="popup__img">
+          <img src="img/photo-tour-booking-2.jpg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua.
+            Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
+            amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
+            sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
+            gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
+            Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
+            vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
+            vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
+            euismod nisi porta.
+          </p>
+          <a href="#" class="btn-text ">Book now</a>
+        </div>
       </div>
-  </div>
+    </div>
 
-    
   </main>
 </body>
 
