--- a/index.html
+++ b/index.html
@@ -326,16 +326,31 @@
               </div>
 
               <div class="form__group">
-                <button class="btn btn--green">Next step &rarr;</button>
+                <a href="#" class="btn-text">Next step &rarr;</a>
               </div>
             </form>
           </div>
         </div>
       </div>
     </section>
+    <!-- Sec_Footer -->
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo.svg" alt="Full logo" class="footer__logo">
+      </div>
+      <div>
+        <div class="footer__navigation">
+          <ul class="footer__list">
+            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Carrers</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+          </ul>
+        </div>
+      </div>
 
-
-
+    </footer>
     <!-- Pop-up -->
     <div class="popup" id="popup">
       <div class="popup__content">
